styling the course info

--- a/course.html
+++ b/course.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- start header -->
-    <div class="header">
+     <div class="header">
         <div class="top-bar">
             <div class="container-fluid">
                 <div class="top-bar__content">
@@ -197,10 +197,71 @@
                 </div>
             </div>
         </div>
-    </div>
+     </div>
     <!-- finish header -->
+    <!-- start Breadcrumb -->
+        <section class="Breadcrumb">
+            <div class="container">
+                <div class="Breadcrumb__content">
+                    <div class="Breadcrumb__home-content-icon">
+                        <i class="fas fa-home Breadcrumb__home-icon"></i>
+                    </div>
+                    <ul class="Breadcrumb__list">
+                        <li class="Breadcrumb__item">
+                            <a href="#" class="Breadcrumb__link">
+                                خانه
+                                <i class="fas fa-angle-left Breadcrumb__icon"></i>
+                            </a>
+                        </li>
+                        <li class="Breadcrumb__item">
+                            <a href="#" class="Breadcrumb__link">
+                                آموزش برنامه نویسی فرانت اند
+                                <i class="fas fa-angle-left Breadcrumb__icon"></i>
+                            </a>
+                        </li>
+                        <li class="Breadcrumb__item">
+                            <a href="#" class="Breadcrumb__link">
+                                دوره متخصص جاوااسکریپت
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    <!-- finish Breadcrumb -->
+    <!-- start course main info -->
+        <section class="course-info">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
+                        <a href="#" class="course-info__link">
+                           آموزش برنامه نویسی پیشرفته فرانت اند
+                        </a>
+                        <h1 class="course-info__title">
+                            آموزش 20 کتابخانه جاوا اسکریپت برای بازار کار
+                        </h1>
+                        <p class="course-info__text">اولین قدم شروع طراحی وبسایت، آموزش HTML هست. HTML یه زبان نشانه گذاری هست که با کمک اون میتونی تگ هایی بنویسی تا سایت رو روی اون تگ ها پیاده کنی. همونجوری که هیچ موجودی نمیتونه بدون اسکلت زندگی کنه، هیچ وبسایتی هم نمیتونه بدون HTML لود بشه. با یادگیری HTML خیلی راحت و قشنگ میتونی یه اسکلت سفت و سخت برای وبسایتت درست کنی. نگران یادگیریشم نباش. ما تو سبزلرن به صورت کاملا رایگان یه دوره مقدماتی تا پیشرفته HTML تدارک دیدیم، تا بدون دغدغه مسیر طراحی سایت رو شروع کنی.این آموزش به صورت کاملا عملی و پروژه محور هست، طوری که بعد از چند جلسه به راحتی میتونی یه فرم ثبت نام با کمک HTML طراحی کنی. از اضافه کردن یه عکس به سایت گرفته، تا دسته بندی کردن مطالب و ساختار بندی هر بخش سایت، همرو میتونی با دوره آموزشی HTML سبزلرن پیاده کنی.</p>
+                         <div class="course-info__social-media">
+                            <a href="#" class="course-info__social-media-item">
+                                <i class="fab fa-telegram-plane course-info__icon"></i>
+                            </a>
+                            <a href="#" class="course-info__social-media-item">
+                                <i class="fab fa-twitter course-info__icon"></i>
+                            </a>
+                            <a href="#" class="course-info__social-media-item">
+                                <i class="fab fa-facebook-f course-info__icon"></i>
+                            </a>
+                         </div>
+                    </div>
+                    <div class="col-6">
+                        <video src="" poster="./images/courses/گیت-و-گیتهاب-2-min-1-247x139.jpg" class="course-info__video" controls></video>
+                    </div>
+                </div>
+            </div>
+        </section>
+    <!-- finish course main info -->
     <!-- start footer -->
-<footer class="footer">
+     <footer class="footer">
     <div class="container">
         <div class="footer-widgets">
             <div class="row">
@@ -262,9 +323,8 @@
         کلیه حقوق برای آکادمی آموزش برنامه نویسی سبزلرن محفوظ است.
     </div>
        </span>
-</footer>
-
-<!-- finish footer -->
+     </footer>
+    <!-- finish footer -->
 
     <script src="./vendor/FontAwesome6/all.min.js"></script>
     <script src="vendor/swiper/swiper-bundle.min.js"></script>
