--- a/course.html
+++ b/course.html
@@ -260,6 +260,211 @@
             </div>
         </section>
     <!-- finish course main info -->
+    <!-- start  main info section -->
+        <main class="main">
+            <div class="container">
+                <div class="row">
+                    <div class="col-8">
+                        <div class="course">
+                            <div class="course-boxes">
+                                <div class="row">
+                                    <div class="col-4">
+                                        <div class="course-boxes__box">
+                                            <div class="course-boxes__box-right">
+                                                <i class="fa fa-graduation-cap course-boxes__box-right-icon"></i>
+                                            </div>
+                                            <div class="course-boxes__box-left">
+                                                <span class="course-boxes__box-left-title">
+                                                    وضعیت دوره
+                                                </span> 
+                                            <span class="course-boxes__box-left-subtitle">
+                                                به اتمام رسیده
+                                            </span>                                          </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-4">
+                                        <div class="course-boxes__box">
+                                            <div class="course-boxes__box-right">
+                                                <i class="far fa-clock course-boxes__box-right-icon"></i>
+                                            </div>
+                                            <div class="course-boxes__box-left">
+                                                <span class="course-boxes__box-left-title">
+                                                   مدت زمان دوره 
+                                                </span> 
+                                            <span class="course-boxes__box-left-subtitle">
+                                                19 ساعت 
+                                            </span>                                          </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-4">
+                                        <div class="course-boxes__box">
+                                            <div class="course-boxes__box-right">
+                                                <i class="far fa-calendar-alt course-boxes__box-right-icon"></i>
+                                            </div>
+                                            <div class="course-boxes__box-left">
+                                                <span class="course-boxes__box-left-title">
+                                                     آخرین بروزرسانی
+                                                </span> 
+                                            <span class="course-boxes__box-left-subtitle">
+                                                1401/03/22  
+                                            </span>                                          </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-4">
+                                        <div class="course-boxes__box">
+                                            <div class="course-boxes__box-right">
+                                                <i class="far fa-user course-boxes__box-right-icon"></i>
+                                            </div>
+                                            <div class="course-boxes__box-left">
+                                                <span class="course-boxes__box-left-title">
+                                                     روش پشتیبانی
+                                                </span> 
+                                            <span class="course-boxes__box-left-subtitle">
+                                                آنلاین 
+                                            </span>                                          </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-4">
+                                        <div class="course-boxes__box">
+                                            <div class="course-boxes__box-right">
+                                                <i class="fas fa-info-circle course-boxes__box-right-icon"></i>
+                                            </div>
+                                            <div class="course-boxes__box-left">
+                                                <span class="course-boxes__box-left-title">
+                                                    پیش نیاز
+                                                </span> 
+                                            <span class="course-boxes__box-left-subtitle">
+                                                   HTML CSS
+                                            </span>                                          </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-4">
+                                        <div class="course-boxes__box">
+                                            <div class="course-boxes__box-right">
+                                                <i class="fas fa-play course-boxes__box-right-icon"></i>
+                                            </div>
+                                            <div class="course-boxes__box-left">
+                                                <span class="course-boxes__box-left-title">
+                                                     نوع مشاهده
+                                                </span> 
+                                            <span class="course-boxes__box-left-subtitle">
+                                                ضبط شده / آنلاین
+                                            </span>                                          </div>
+                                        </div>
+                                    </div>
+                                   
+                                </div>
+                            </div>
+
+                            <!-- start course progress -->
+                              <div class="course-progress">
+                                <div class="course-progress__header">
+                                    <i class="fas fa-chart-line course-progress__icon"></i>
+                                 <span class="course-progress__title">
+                                    درصد پیشرفت دوره : 100%
+                                 </span>
+                                </div>
+                                <div class="progress course-progress__bar">
+                                    <div class="progress-bar progress-bar-striped progress-bar-animated bg-success " role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                                  </div>
+                              </div>
+                            <!-- finish course progress -->
+                            <!-- start introduction -->
+                            
+                            <div class="introduction">
+                                <div class="introduction__item">
+                                    <span class="introduction__title title">
+                                        آموزش 28 کتابخانه جاوا اسکریپت مخصوص بازار کار
+                                    </span>
+                                    <img src="./images/blogs/Com_js_20_project-247x139.png" class="introduction__img" alt="">
+                                     <p class="introduction__text">
+                                        امروزه کتابخانه‌ها کد نویسی را خیلی آسان و لذت بخش تر کرده اند. به قدری که حتی امروزه هیچ شرکت برنامه نویسی پروژه های خود را با Vanilla Js پیاده سازی نمی کند و همیشه از کتابخانه ها و فریمورک های موجود استفاده می کند. پس شما هم اگه میخواید یک برنامه نویس عالی فرانت اند باشید، باید کتابخانه های کاربردی که در بازار کار استفاده می شوند را به خوبی بلد باشید
+                                     </p>
+                                     <p class="introduction__text">
+                                        امروزه کتابخانه‌ها کد نویسی را خیلی آسان و لذت بخش تر کرده اند. به قدری که حتی امروزه هیچ شرکت برنامه نویسی پروژه های خود را با Vanilla Js پیاده سازی نمی کند و همیشه از کتابخانه ها و فریمورک های موجود استفاده می کند. پس شما هم اگه میخواید یک برنامه نویس عالی فرانت اند باشید، باید کتابخانه های کاربردی که در بازار کار استفاده می شوند را به خوبی بلد باشید
+                                     </p>
+                                </div>
+                                <div class="introduction__item">
+                                    <span class="introduction__title title">
+                                        هدف از برگزاری این دوره چیه ؟
+                                    </span>
+                                    <img src="./images/blogs/Com_js_20_project-247x139.png" class="introduction__img" alt="">
+                                     <p class="introduction__text">
+                                        امروزه کتابخانه‌ها کد نویسی را خیلی آسان و لذت بخش تر کرده اند. به قدری که حتی امروزه هیچ شرکت برنامه نویسی پروژه های خود را با Vanilla Js پیاده سازی نمی کند و همیشه از کتابخانه ها و فریمورک های موجود استفاده می کند. پس شما هم اگه میخواید یک برنامه نویس عالی فرانت اند باشید، باید کتابخانه های کاربردی که در بازار کار استفاده می شوند را به خوبی بلد باشید
+                                     </p>
+                                     <p class="introduction__text">
+                                        امروزه کتابخانه‌ها کد نویسی را خیلی آسان و لذت بخش تر کرده اند. به قدری که حتی امروزه هیچ شرکت برنامه نویسی پروژه های خود را با Vanilla Js پیاده سازی نمی کند و همیشه از کتابخانه ها و فریمورک های موجود استفاده می کند. پس شما هم اگه میخواید یک برنامه نویس عالی فرانت اند باشید، باید کتابخانه های کاربردی که در بازار کار استفاده می شوند را به خوبی بلد باشید
+                                     </p>
+                                </div>
+                                <div class="introduction__btns">
+                                    <a href="#" class="introduction__btns-item"> دانلود همگانی ویدیو ها</a>
+                                    <a href="#" class="introduction__btns-item"> دانلود همگانی پیوست ها </a>
+                                </div>
+
+                                <div class="introduction__topic">
+                                    <div class="accordion" id="accordionExample1">
+                                        <div class="accordion-item">
+                                          <h2 class="accordion-header" id="headingone">
+                                            <button class="accordion-button"  type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                              معرفی دوره
+                                            </button>
+                                          </h2>
+                                          <div id="collapseOne" aria-labelledby="headingone" class="accordion-collapse collapse show" data-bs-parent="#accordionExample1">
+                                             <div class="accordion-body introduction__accordion-body">
+                                                <div class="introduction__accordion-right">
+                                                    <span class="introduction__accordion-count">1</span>
+                                                    <i class="fab fa-youtube introduction__accordion-icon"></i>
+                                                    <a href="#" class="introduction__accordion-link">
+                                                        معرفی دوره + چرا یادگیری کتابخانه ها ضروری است؟
+                                                    </a>
+                                                </div>
+                                                <div class="introduction__accordion-left">
+                                                    <span class="introduction__accordion-time">
+                                                        18:34
+                                                    </span>
+                                                </div>
+                                             </div>
+                                          </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="accordion" id="accordionExample2">
+                                        <div class="accordion-item">
+                                          <h2 class="accordion-header" id="headingtwo">
+                                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapsetwo" aria-expanded="true" aria-controls="collapsetwo">
+                                              معرفی دوره
+                                            </button>
+                                          </h2>
+                                          <div id="collapsetwo" aria-labelledby="headingtwo" class="accordion-collapse collapse " data-bs-parent="#accordionExample2">
+                                             <div class="accordion-body introduction__accordion-body">
+                                                <div class="introduction__accordion-right">
+                                                    <span class="introduction__accordion-count">1</span>
+                                                    <i class="fab fa-youtube introduction__accordion-icon"></i>
+                                                    <a href="#" class="introduction__accordion-link">
+                                                        معرفی دوره + چرا یادگیری کتابخانه ها ضروری است؟
+                                                    </a>
+                                                </div>
+                                                <div class="introduction__accordion-left">
+                                                    <span class="introduction__accordion-time">
+                                                        18:34
+                                                    </span>
+                                                </div>
+                                             </div>
+                                          </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- finish introduction -->
+
+                        </div>
+                    </div>
+                    <div class="col-4"></div>
+                </div>
+            </div>
+        </main>
+    <!-- finish  main info section -->
+
     <!-- start footer -->
      <footer class="footer">
     <div class="container">
@@ -327,6 +532,7 @@
     <!-- finish footer -->
 
     <script src="./vendor/FontAwesome6/all.min.js"></script>
+    <script src="vendor/Bootstrap5/bootstrap.bundle.min.js"></script>
     <script src="vendor/swiper/swiper-bundle.min.js"></script>
 </body>
 </html>
