Completing the static development of the course page

--- a/course.html
+++ b/course.html
@@ -412,7 +412,7 @@
                                           <div id="collapseOne" aria-labelledby="headingone" class="accordion-collapse collapse show" data-bs-parent="#accordionExample1">
                                              <div class="accordion-body introduction__accordion-body">
                                                 <div class="introduction__accordion-right">
-                                                    <span class="introduction__accordion-count">1</span>
+                                                    <div class="introduction__accordion-count">1</div>
                                                     <i class="fab fa-youtube introduction__accordion-icon"></i>
                                                     <a href="#" class="introduction__accordion-link">
                                                         معرفی دوره + چرا یادگیری کتابخانه ها ضروری است؟
@@ -438,7 +438,7 @@
                                           <div id="collapsetwo" aria-labelledby="headingtwo" class="accordion-collapse collapse " data-bs-parent="#accordionExample2">
                                              <div class="accordion-body introduction__accordion-body">
                                                 <div class="introduction__accordion-right">
-                                                    <span class="introduction__accordion-count">1</span>
+                                                    <div class="introduction__accordion-count">1</div>
                                                     <i class="fab fa-youtube introduction__accordion-icon"></i>
                                                     <a href="#" class="introduction__accordion-link">
                                                         معرفی دوره + چرا یادگیری کتابخانه ها ضروری است؟
@@ -456,10 +456,122 @@
                                 </div>
                             </div>
                             <!-- finish introduction -->
-
+                            <!-- start Teacher Details -->
+                               <div class="techer-details">
+                                <div class="techer-details__header">
+                                    <div class="techer-details__header-right">
+                                        <img src="./images/_MG_2760.JPG" alt="" class="techer-details__header-img">
+                                        <div class="techer-details__header-titles">
+                                            <a href="#" class="techer-details__header-link"> افسانه عبدی دیزجی</a>
+                                             <span class="techer-details__header-skill">
+                                                Front End Developer
+                                             </span>
+                                        </div>
+                                    </div>
+                                    <div class="techer-details__header-left">
+                                        <i class="techer-details__header-icon fas fa-chalkboard-teacher"></i>
+                                        <span class="techer-details__header-name">مدرس</span>
+                                    </div>
+                                </div>
+                                <p class="techer-details__footer">
+                                    اول از همه برنامه نویسی اندروید را شروع کردم و نزدیک به 2  سال با زبان جاوا اسکریپت کار کردم و سپس تصمیم گرفتم تا در زمینه ی ...
+                                </p>
+                               </div>
+                            <!-- finish Teacher Details -->
                         </div>
                     </div>
-                    <div class="col-4"></div>
+                    <div class="col-4">
+                        <div class="courses-info">
+                            <div class="course-info">
+                                <div class="course-info__register">
+                                    <span class="course-info__register-title">
+                                        شما دانشجوی دوره هستید
+                                        <i class="fas fa-graduation-cap course-info__register-icon"></i>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="course-info">
+                                <div class="course-info__total">
+                                    <div class="course-info__top">
+                                        <div class="course-info__total-sale">
+                                            <i class="fas fa-user-graduate course-info__total-sale-icon"></i>
+                                            <span class="course-info__total-sale-text">
+                                                تعداد دانشجو :
+                                            </span>
+                                            <span class="course-info__total-sale-number">
+                                                178
+                                            </span>
+                                        </div>
+                                    </div>
+                                    <div class="course-info__bottom">
+                                        <div class="course-info__total-comment">
+                                            <i class="far fa-comments course-info__total-comment-icon"></i>
+                                            <span class="course-info__total-comment-text">
+                                                67 دیدگاه
+                                            </span>
+                                        </div>
+                                        <div class="course-info__total-view">
+                                            <i class="far fa-eye course-info__total-view-icon"></i>
+                                            <span class="course-info__total-view-text">
+                                                105بازدید
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="course-info">
+                                <div class="course-info__header-short-url">
+                                    <i class="fas fa-link course-info__short-url-icon"></i>
+                                    <span class="course-info__short-url-text">
+                                        لینک کوتاه
+                                    </span>
+                                </div>
+                                <span class="course-info__short-url">
+                                    https://sabzlearn.ir/?p-117472
+                                </span>
+                            </div>
+                            <div class="course-info">
+                                <span class="course-info__topic-title">
+                                    سرفصل های دوره
+                                </span>
+                                <span class="course-info__topic-text">
+                                    برای مشاهده و یا دانلود دوره روی کلمه 
+                                    <a href="#" style="color: blue; font-weight: bold; text-decoration: none;">
+                                    لینک</a>
+                                    کلیک کنید
+                                </span>
+                            </div>
+                            <div class="course-info">
+                                <span class="course-info__courses-title">دوره های مرتبط</span>
+                                <ul class="course-info__courses-list">
+                                    <li class="course-info__courses-list-item">
+                                        <a href="#" class="course-info__courses_link">
+                                            <img src="./images/courses/PWA-min-1-247x139.jpg" alt="" class="course-info__courses-img">
+                                            <span class="course-info__courses-text">
+                                                پروژه های تخصصی با جاوا اسکریپت
+                                            </span>
+                                        </a>
+                                    </li>
+                                    <li class="course-info__courses-list-item">
+                                        <a href="#" class="course-info__courses_link">
+                                            <img src="./images/courses/PWA-min-1-247x139.jpg" alt="" class="course-info__courses-img">
+                                            <span class="course-info__courses-text">
+                                                پروژه های تخصصی با جاوا اسکریپت
+                                            </span>
+                                        </a>
+                                    </li>
+                                    <li class="course-info__courses-list-item">
+                                        <a href="#" class="course-info__courses_link">
+                                            <img src="./images/courses/PWA-min-1-247x139.jpg" alt="" class="course-info__courses-img">
+                                            <span class="course-info__courses-text">
+                                                پروژه های تخصصی با جاوا اسکریپت
+                                            </span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
