Creating and developing a blog page - first part

--- a/index.html
+++ b/index.html
@@ -808,6 +808,36 @@
     </div>
 </div>
 <!-- finish articles -->
+ <!-- start Breadcrumb -->
+        <section class="Breadcrumb">
+            <div class="container">
+                <div class="Breadcrumb__content">
+                    <div class="Breadcrumb__home-content-icon">
+                        <i class="fas fa-home Breadcrumb__home-icon"></i>
+                    </div>
+                    <ul class="Breadcrumb__list">
+                        <li class="Breadcrumb__item">
+                            <a href="#" class="Breadcrumb__link">
+                                خانه
+                                <i class="fas fa-angle-left Breadcrumb__icon"></i>
+                            </a>
+                        </li>
+                        <li class="Breadcrumb__item">
+                            <a href="#" class="Breadcrumb__link">
+                                آموزش برنامه نویسی فرانت اند
+                                <i class="fas fa-angle-left Breadcrumb__icon"></i>
+                            </a>
+                        </li>
+                        <li class="Breadcrumb__item">
+                            <a href="#" class="Breadcrumb__link">
+                                دوره متخصص جاوااسکریپت
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    <!-- finish Breadcrumb -->
 <!-- start footer -->
 <footer class="footer">
     <div class="container">
@@ -878,6 +908,7 @@
 
     <script src="./vendor/FontAwesome6/all.min.js"></script>
     <script src="vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="vendor/Bootstrap5/bootstrap.bundle.min.js"></script>
      <script src="./js/slider.js"></script>
 </body>
 </html>
