Completing the static development of the blog page

--- a/blog.html
+++ b/blog.html
@@ -265,8 +265,95 @@
                             <i class="fas fa-star article__score-icon"></i>
                             <i class="fas fa-star article__score-icon"></i>
                         </div>
+                        <span class="article__score-text">(امتیاز 5) - 4.2/5</span>
+                    </div>
+                    <p class="article__paragraph paragraph">
+                        امروزه کتابخانه‌ها کد نویسی را خیلی آسان و لذت بخش تر کرده اند. به قدری که حتی امروزه هیچ شرکت برنامه نویسی پروژه های خود را با Vanilla Js پیاده سازی نمی کند و همیشه از کتابخانه ها و فریمورک های موجود استفاده می کند. پس شما هم اگه میخواید یک برنامه نویس عالی فرانت اند باشید، باید کتابخانه های کاربردی که در بازار کار استفاده می شوند را به خوبی بلد باشیدامروزه کتابخانه‌ها کد نویسی را خیلی آسان و لذت بخش تر کرده اند. به قدری که حتی امروزه هیچ شرکت برنامه نویسی پروژه های خود را با Vanilla Js پیاده سازی نمی کند و همیشه از کتابخانه ها و فریمورک های موجود استفاده می کند. پس شما هم اگه میخواید یک برنامه نویس عالی فرانت اند باشید، باید کتابخانه های کاربردی که در بازار کار استفاده می شوند را به خوبی بلد باشیدامروزه کتابخانه‌ها کد نویسی را خیلی آسان و لذت بخش تر کرده اند. به قدری که حتی امروزه هیچ شرکت برنامه نویسی پروژه های خود را با Vanilla Js پیاده سازی نمی کند و همیشه از کتابخانه ها و فریمورک های موجود استفاده می کند. پس شما هم اگه میخواید یک برنامه نویس عالی فرانت اند باشید، باید کتابخانه های کاربردی که در بازار کار استفاده می شوند را به خوبی بلد باشید
+                    </p>
+                    <div class="article-read">
+                        <span class="article-read__title">آنچه در این مقاله خواهید خواند</span>
+                        <ul class="article-read__list">
+                            <li class="article-read__item">
+                                <a href="#" class="article-read__link">معرفی بهترین سایت های آموزش جاوا اسکریپت</a>
+                            </li>
+                            <li class="article-read__item">
+                                <a href="#" class="article-read__link">یک راه آسان تر دوره های جاوا اسکریپت سبزلرن!</a>
+                            </li>
+                            <li class="article-read__item">
+                                <a href="#" class="article-read__link">ثبت نام در دوره های جاوا اسکریپت سبزلرن</a>
+                            </li>
+                        </ul>
+                    </div>
+                     <img src="./images/courses/TypeScript-min-247x139.jpg" alt="article image" class="article__seconadary-banner">
+                     <div class="article-section">
+                        <h2 class="article-section__title">معرفی بهترین سایت های آموزش جاوا اسکریپت :</h2>
+                        <p class="paragraph article-section__text">امروزه کتابخانه‌ها کد نویسی را خیلی آسان و لذت بخش تر کرده اند. به قدری که حتی امروزه هیچ شرکت برنامه نویسی پروژه های خود را با Vanilla Js پیاده سازی نمی کند و همیشه از کتابخانه ها و فریمورک های موجود استفاده می کند. پس شما هم اگه میخواید یک برنامه نویس عالی فرانت اند باشید، باید کتابخانه های کاربردی که در بازار کار استفاده می شوند را به خوبی بلد باشیدامروزه کتابخانه‌ها کد نویسی را خیلی آسان و لذت بخش تر کرده اند. به قدری که حتی امروزه هیچ شرکت برنامه نویسی پروژه های خود را با Vanilla Js پیاده سازی نمی کند و همیشه از کتابخانه ها و فریمورک های موجود استفاده می کند. پس شما هم اگه میخواید یک برنامه نویس عالی فرانت اند باشید، باید کتابخانه های کاربردی که در بازار کار استفاده می شوند را به خوبی بلد باشیدامروزه کتابخانه‌ها کد نویسی را خیلی آسان و لذت بخش تر کرده اند. به قدری که حتی امروزه هیچ شرکت برنامه نویسی پروژه های خود را با Vanilla Js پیاده سازی نمی کند و همیشه از کتابخانه ها و فریمورک های موجود استفاده می کند. پس شما هم اگه میخواید یک برنامه نویس عالی فرانت اند باشید، باید کتابخانه های کاربردی که در بازار کار استفاده می شوند را به خوبی بلد باشید</p>
+                        <img src="./images/courses/sabz-next-247x139.png" alt="article body img" class="article-section__img">
+                     </div>
+                     <div class="article-section">
+                        <h2 class="article-section__title"> یک راه آسان تر دوره های جاوا اسکریپت سبزلرن</h2> 
+                        <p class="paragraph article-section__text">امروزه کتابخانه‌ها کد نویسی را خیلی آسان و لذت بخش تر کرده اند. به قدری که حتی امروزه هیچ شرکت برنامه نویسی پروژه های خود را با Vanilla Js پیاده سازی نمی کند و همیشه از کتابخانه ها و فریمورک های موجود استفاده می کند. پس شما هم اگه میخواید یک برنامه نویس عالی فرانت اند باشید، باید کتابخانه های کاربردی که در بازار کار استفاده می شوند را به خوبی بلد باشیدامروزه کتابخانه‌ها کد نویسی را خیلی آسان و لذت بخش تر کرده اند. به قدری که حتی امروزه هیچ شرکت برنامه نویسی پروژه های خود را با Vanilla Js پیاده سازی نمی کند و همیشه از کتابخانه ها و فریمورک های موجود استفاده می کند. پس شما هم اگه میخواید یک برنامه نویس عالی فرانت اند باشید، باید کتابخانه های کاربردی که در بازار کار استفاده می شوند را به خوبی بلد باشیدامروزه کتابخانه‌ها کد نویسی را خیلی آسان و لذت بخش تر کرده اند. به قدری که حتی امروزه هیچ شرکت برنامه نویسی پروژه های خود را با Vanilla Js پیاده سازی نمی کند و همیشه از کتابخانه ها و فریمورک های موجود استفاده می کند. پس شما هم اگه میخواید یک برنامه نویس عالی فرانت اند باشید، باید کتابخانه های کاربردی که در بازار کار استفاده می شوند را به خوبی بلد باشید</p>
+                        <img src="./images/courses/sabz-next-247x139.png" alt="article body img" class="article-section__img">
+                     </div>
+                     <div class="article-section">
+                        <h2 class="article-section__title">ثبت نام در دوره های جاوا اسکریپت سبزلرن</h2> 
+                        <p class="paragraph article-section__text">امروزه کتابخانه‌ها کد نویسی را خیلی آسان و لذت بخش تر کرده اند. به قدری که حتی امروزه هیچ شرکت برنامه نویسی پروژه های خود را با Vanilla Js پیاده سازی نمی کند و همیشه از کتابخانه ها و فریمورک های موجود استفاده می کند. پس شما هم اگه میخواید یک برنامه نویس عالی فرانت اند باشید، باید کتابخانه های کاربردی که در بازار کار استفاده می شوند را به خوبی بلد باشیدامروزه کتابخانه‌ها کد نویسی را خیلی آسان و لذت بخش تر کرده اند. به قدری که حتی امروزه هیچ شرکت برنامه نویسی پروژه های خود را با Vanilla Js پیاده سازی نمی کند و همیشه از کتابخانه ها و فریمورک های موجود استفاده می کند. پس شما هم اگه میخواید یک برنامه نویس عالی فرانت اند باشید، باید کتابخانه های کاربردی که در بازار کار استفاده می شوند را به خوبی بلد باشیدامروزه کتابخانه‌ها کد نویسی را خیلی آسان و لذت بخش تر کرده اند. به قدری که حتی امروزه هیچ شرکت برنامه نویسی پروژه های خود را با Vanilla Js پیاده سازی نمی کند و همیشه از کتابخانه ها و فریمورک های موجود استفاده می کند. پس شما هم اگه میخواید یک برنامه نویس عالی فرانت اند باشید، باید کتابخانه های کاربردی که در بازار کار استفاده می شوند را به خوبی بلد باشید</p>
+                        <img src="./images/courses/sabz-next-247x139.png" alt="article body img" class="article-section__img">
+                     </div>
+                     <div class="article-social-media">
+                        <span class="article-social-media__text">اشتراک گذاری :</span>
+                        <a href="#" class="article-social-media__link">
+                            <i class="fab fa-telegram-plane article-social-media__icon"></i>
+                        </a>
+                        <a href="#" class="article-social-media__link">
+                            <i class="fab fa-twitter article-social-media__icon"></i>
+                        </a>
+                        <a href="#" class="article-social-media__link">
+                            <i class="fab fa-facebook-f article-social-media__icon"></i>
+                        </a>
+                     </div>
+                </div>
+                <div class="suggestion-article">
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="suggestion-article__right suggestion-article__content">
+                                <a href="#" class="suggestion-articles__icon-link">
+                                    <i class="fas fa-arrow-right suggestion-article__icon"></i>
+                                </a>
+                                <a href="#" class="suggestion-article__link">
+                                    سریع ترین و بهترین راه یادگیری جاوا اسکریپت چیست ؟ | تجربه برنامه نویسان
+                                </a>
+                            </div>
+                            
+                        </div>
+                        <div class="col-6">
+                            <div class="suggestion-article__left suggestion-article__content">
+                                <a href="#" class="suggestion-articles__icon-link">
+                                    <i class="fas fa-arrow-left suggestion-article__icon"></i>
+                                </a>
+                                <a href="#" class="suggestion-article__link">
+                                    سریع ترین و بهترین راه یادگیری جاوا اسکریپت چیست ؟ | تجربه برنامه نویسان
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
+
+                <div class="comments">
+                    <span class="comments__title">دیدگاهتان را بنویسید</span>
+                    <span class="comments__text">
+                        با عنوان Afsaneh-a
+                        وارد شده اید
+                        <a href="#">خارج میشوید؟</a>
+                        بخش های مورد نیاز علامت گذاری شده اند *
+                    </span>
+                    <div class="comments__content">
+                        <span class="comments__content-title">*دیدگاه</span>
+                        <textarea class="comments__content-textarea"></textarea>
+                    </div>
+                    <button type="submit" class="comments__button">فرستادن دیدگاه</button>
+                </div>
+
              </div>
             <div class="col-4">
                 <div class="courses-info">
