The second part of development of the login page

--- a/login.html
+++ b/login.html
@@ -225,7 +225,24 @@
                     <i class="fas fa-sign-out-alt login-form__btn-icon"></i>
                     <span class="login-form__btn-text">ورود</span>
                 </button>
+                <div class="login-form__password-setting">
+                    <label class="login-form__password-remember">
+                        <input type="checkbox" class="login-form__password-chechbox">
+                        <span class="login-form__password-text">مرا به خاطر داشته باش</span>
+                    </label>
+                    <label  class="login-form__password-forget">
+                         <a href="#" class="login-form__password-forget-link">رمز عبور را فراموش کرده اید؟</a>
+                    </label>
+                </div>
             </form>
+            <div class="login-des">
+                <span class="login-des-title">سلام کاربر محترم :</span>
+                <ul class="login-des-list">
+                    <li class="login-des-item">لطفا از مرورگر های مطمئن و بروز مانند گوگل کروم و فایرفاکس استفاده کنید</li>
+                    <li class="login-des-item">ما هرگز اطلاعات محرمانه شما را از طریق ایمیل درخواست نمیکنیم</li>
+                    <li class="login-des-item">لطفا کلمه عبور خود را در فواصل زمانی کوتاه تغییر دهید</li>
+                </ul>
+            </div>
         </div>
     </section>
     <!-- finish form section -->
