add type writer-js

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <!-- start landing -->
     <section class="landing">
         <div class="container">
-            <h1 class="landing__title">ما به هر قیمتی دوره آموزشی تولید نمیکنیم !</h1>
+            <h1 class="landing__title"></h1>
             <h2 class="landing__subtitle">با آکادمی سبزلرن برنامه نویسی رو با خیال راحت یادبگیر و پیشرفت کن.</h2>
             <div class="landing__searchbar">
                 <input type="text" class="landing__searchbar-input" placeholder="چه چیزی دوست داری یادبگیری..."/>
@@ -910,5 +910,6 @@
     <script src="vendor/swiper/swiper-bundle.min.js"></script>
     <script src="vendor/Bootstrap5/bootstrap.bundle.min.js"></script>
      <script src="./js/slider.js"></script>
+     <script src="./js/index.js"></script>
 </body>
 </html>
