make counter for landing numbers

--- a/index.html
+++ b/index.html
@@ -216,19 +216,19 @@
                 <div class="landing-status__item">
                     <i class="fas fa-clock statusicon"></i>
                     <!-- <img width="50" height="50" src="https://img.icons8.com/ios/50/alarm-clock--v1.png" alt="alarm-clock--v1"/> -->
-                    <span class="landing-status__count">31,320</span>
+                    <span class="landing-status__count"id="miutes-counter">1,320</span>
                     <span class="landing-status__text">دقیقه آموزش تولید کردیم</span>
                 </div>
                 <div class="landing-status__item">
                     <i class="fas fa-book statusicon"></i>
                     <!-- <img width="50" height="50" src="https://img.icons8.com/ios/50/open-book--v1.png" alt="open-book--v1"/> -->
-                    <span class="landing-status__count">40</span>
+                    <span class="landing-status__count" id="courses-count">40</span>
                     <span class="landing-status__text">دوره اموزشی تولید کردیم</span>
                 </div>
                 <div class="landing-status__item">
                     <i class="fas fa-user statusicon"></i>
                     <!-- <img width="64" height="64" src="https://img.icons8.com/pastel-glyph/64/graduation-cap--v1.png" alt="graduation-cap--v1"/> -->
-                    <span class="landing-status__count">31,071</span>
+                    <span class="landing-status__count" id="user-counter" >31071</span>
                     <span class="landing-status__text">  کاربر توی سبزلرن ثبت نام کردن</span>
                 </div>
             </div>
